@@ -1,0 +1,6 @@
+Immutable namespaces
+
+Manageable namespaces
+
+Add Namespace   [[NS_XYZ -> {canonical index, canonical name} ]]
+Remove Namespace
